tests/paczka1/fuzzy1/52310304.err
Error in line 2: dyCRMQ60rR A795 39,5
Error in line 13: fuN9yB8 A795 9,2
Error in line 22: fuN9yB8 A901 58,5
Error in line 17: A795 A795 79,5
Error in line 34: A795 A901 6,0
